# botc-script-editor

./: .gitignore  AGENTS.md  character_fixes.py  extract_botc_json_info.py  fixing_json.py  generate_app_database.py  剧本design.afdesign
.github/workflows/: build-app.yml
all_jsons/BWG·剧本大乱斗/: 602#梅姨阁诗人v1.1-提线苏际泽.json  667#超越世界线-灰烬.json  669#恶魔学院v2.2-会飞的小熊.json  671#一杯苦酒-提线政客.json  674#三神谜题-华稽.json
all_jsons/SUI染钟楼投稿&火乐杯剧本/: #上帝出席-黑白熊.json  #传奇之夜-Sui染钟楼.json  #刀光剑影-长湴.json  #加冕典礼-我不知道.json  #同室操戈-能天使.json  #名士风流v1.6.1-暮光不是木瓜.json  #回到三日之前-星火乐.json  #土豆地雷-黄金船sama.json  #塔尔塔罗斯-海雾.json  #天若有情-长湴.json  #奇异人生-海雾&奇异人生推理馆.json  #审判日-七海小烯.json  #小瓶子-⼩諧星ChinHoYiu.json  #岁岁年年-蓝铃兰（新年）.json  #找朋友-星火乐.json  #择日而亡-海雾.json  #新手村v7-小烯C2H43g.json  #晚安大小姐-⼩諧星ChinHoYiu.json  #暗箭明锋-卷饼.json  #朱门古道v1.2-卷饼.json  #杯盘狼藉V5-拉尔.json  #构造区-蓝铃兰.json  #灵异蜂蜜-星火乐.json  #烤面包-星火乐.json  #熊出没-双齐.json  #登车拔剑起-KNitrate.json  #白日宣淫v1.3-咕咕菇.json  #荧惑守心-素履行人.json  #菜市场v4-蓝铃兰.json  #蛮熊搬家-蓝铃兰.json  #规则怪谈-星火乐.json  #赎罪小镇-星火乐.json  #轻舟共渡v2.1-海雾.json  814#新大陆-蓝铃兰.json  招蜂引蝶v2.2-KNitrate.json
all_jsons/万象星启体验剧本/: 万象星启-角色大全.json
all_jsons/华灯初上剧本创作大赛/: #众口铄金-勾陈.json  #侠客风云决-泽渡哥摧毁停车场.json  #寂静之城-SUI染钟楼.json  #恶路难行-Boxiao.json  #成双成对-Dream.json  #我的后半生-闻人.json  #效死之徒-摸鱼学徒.json  #曼珠沙华-蒸汽riki.json  (+11 more)
docs/: release-signing.md
script_editor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
script_editor/src-tauri/: Cargo.toml  tauri.conf.json
script_editor/src-tauri/capabilities/: default.json
script_editor/src-tauri/icons/: icon.icns
script_editor/src-tauri/src/: main.rs
(+5041 files in other folders)
