[package]
name = "botc-script-editor"
version = "0.1.0"
description = "Blood on the Clocktower script editor"
authors = ["xuan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tauri = { version = "2", features = [] }
